@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: Handling of cases where all options are unsupported (such as CUDA and OpenCL tests with no valid backends found) to avoid prompts
+pts-core: Be more liberal in allowing CUDA/OpenCL GPU compute tests to run fine without display server active
 phodevi: NVIDIA GPU detection within WSL2
 
 Phoronix Test Suite 9.8.0 Milestone 2
